# fuse-open-runtime

./: .deepsecignore  .deployment-config  .dockerignore  .editorconfig  .env.a2a  .env.bak  .env.bak2  .env.cloud_runtime.template  .env.development  .env.development.example  .env.docker  .env.example  .env.local.template  .env.mcp  .env.production  .env.production.example  .env.railway.example  .env.railway.template  .eslintrc.json  .gcloudignore  .gitignore  .gitlink-allowlist  .gitmodules  .hintrc  .kilocodemodes  .kilocoderules  .lintstagedrc.js  .mcp.json  .netlify-deploy.sh  .npmrc  .pnpmfile.cjs  .prettierignore  .railwayignore  .yarnrc.yml  A2A_IMPLEMENTATION_COMPLETE.md  A2A_IMPLEMENTATION_STATUS_REPORT.md  ADMIN_DASHBOARD_SUMMARY.md  AGENCY-HUB-ANALYSIS.md  AGENCY-HUB-IMPLEMENTATION-COMPLETE.md  AGENT-COMMUNICATION-GUIDE.md  (+755 more)
--help/: alert_rules.yml  docker-compose.monitoring.yml  monitoring-system-report.html  monitoring-system-report.json
.Jules/: palette.md
.agent/: ALMANAC.json  ALMANAC.md  ANTIGRAVITY_ARCHITECTURE.md  ANTIGRAVITY_KIT_INTEGRATION.md  CLAWD_ASSIMILATION_PLAN.md  CLAWD_FULL_ASSIMILATION_PLAN.md  FRAMEWORK_CONSCIOUSNESS_ACTIVATED.md  HANDOFF_PROMPT.md  INTEGRATION_SUMMARY_2026-01-18.md  META_SKILLS_GUIDE.md  PLUGINS_INSTALLED.md  SELF_IMPROVEMENT_CYCLE.md  SESSION_COMPLETE_2025-12-20.md  SESSION_SUMMARY_2025-12-20.md  (+17 more)
apps/tauri-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/tauri-desktop/src-tauri/capabilities/: default.json
apps/tauri-desktop/src-tauri/icons/: icon.icns
apps/tauri-desktop/src-tauri/src/: bridge.rs  lib.rs
(+29427 files in other folders)
